--- a/UniversalMailer/UMPreferencesPanelUI.xib
+++ b/UniversalMailer/UMPreferencesPanelUI.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="16A201w" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
@@ -171,14 +171,6 @@
                                                     </buttonCell>
                                                     <connections>
                                                         <binding destination="Lfg-hO-0La" name="enabled" keyPath="values.UMMailFilterEnabled" id="0lI-FL-wDU"/>
-                                                        <binding destination="Lfg-hO-0La" name="enabled2" keyPath="values.UMSendUsageStats" previousBinding="0lI-FL-wDU" id="kFB-wU-kj9">
-                                                            <dictionary key="options">
-                                                                <integer key="NSMultipleValuesPlaceholder" value="-1"/>
-                                                                <integer key="NSNoSelectionPlaceholder" value="-1"/>
-                                                                <integer key="NSNotApplicablePlaceholder" value="-1"/>
-                                                                <integer key="NSNullPlaceholder" value="-1"/>
-                                                            </dictionary>
-                                                        </binding>
                                                         <binding destination="Lfg-hO-0La" name="value" keyPath="values.UMSendUsageStats" id="uPX-ZF-EoS"/>
                                                     </connections>
                                                 </button>
@@ -474,7 +466,7 @@
                                                     <rect key="frame" x="17" y="94" width="388" height="205"/>
                                                     <clipView key="contentView" id="HAn-Cz-nnw">
                                                         <rect key="frame" x="1" y="1" width="386" height="203"/>
-                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
                                                             <textView importsGraphics="NO" richText="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="zzo-K2-H3j">
                                                                 <rect key="frame" x="0.0" y="0.0" width="386" height="203"/>
